<resources>
    <string name="app_name">Movation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Einstellungen</string>
    <string name="title_activity_login">Anmelden</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in">Anmelden oder Registrieren</string>
    <string name="action_sign_in_short">Anmelden</string>
    <string name="error_invalid_email">Ungültige Mailadresse</string>
    <string name="error_invalid_password">Das Passwort ist zu kurz</string>
    <string name="error_incorrect_password">Das Passwort ist nicht korrekt</string>
    <string name="error_field_required">Dieses Feld ist erforderlich</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="notification_started_assignment">Gestartete Aufgabe: %1$s</string>
    <string name="started_assignment_x">Aufgabe \"%1$s\" gestartet</string>
    <string name="notification_please_wait_for_pulse">Bitte warte, bis dein Puls erkannt wird</string>
    <string name="notification_please_wait_for_gps">Bitte warte, bis deine Position bestimmt ist</string>


    <string name="notification_title">Movation</string>
    <string name="notification_click_me">Für weitere Informationen antippen</string>
    <string name="assignment_already_active">Es ist bereits eine Aufgabe gestartet, bitte beende diese zuerst.</string>

    <string name="notification_run_meters">Absolvierte Strecke: %1$d m</string>
    <string name="notification_current_pulse">Aktueller Puls: %1$d</string>
    <string name="notification_success">Du bist erfolgreich %1$d Meter gelaufen!</string>
    <string name="notification_ticker">Aufgabe gestartet</string>
    <string name="assignment_finished">Aufgabe erledigt</string>
    <string name="dummy_username">horsti@aol.com</string>
    <string name="dummy_password">horsti</string>

    <string name="homepage">Home</string>
    <string name="goals">Ziele</string>
    <string name="stats">Statistik</string>
    <string name="movatar">Movatar</string>
    <string name="microsoft_band">Microsoft Band</string>
    <string name="credits">Creditpoints</string>

    <!-- Strings for SensorFragment -->
    <string name="sensor_steps">Im Folgenden können relevante Sensordaten des Microsoft Bands
    in Echtzeit angezeigt werden.\n\n<b>Notwendige Schritte:</b>\n
    </string>

    <string name="sensor_step_nr1">1.\t\t</string>
    <string name="sensor_step_nr2">2.\t\t</string>
    <string name="sensor_step_nr3">3.\t\t</string>
    <string name="sensor_step_nr4">4.\t\t</string>
    <string name="sensor_step_nr5">5.\t\t</string>
    <string name="sensor_step_nr6">6.\t\t</string>

    <string name="sensor_step1">Vergewissern, ob die App \"Microsoft Health\" installiert ist</string>
    <string name="sensor_step2">Bluetooth-Verbindung zum Band herstellen</string>
    <string name="sensor_step3">\"Pulsmessung erlauben\" drücken, wenn damit einverstanden</string>
    <string name="sensor_step4">\"Messung starten\" drücken, um mit der Messung zu beginnen</string>
    <string name="sensor_step5">Sensordaten werden in Echtzeit angezeigt</string>
    <string name="sensor_step6">Zum Abbrechen \"Messung beenden\" drücken\n</string>

    <string name="register_sensors">Messung starten</string>
    <string name="unregister_sensors">Messung beenden</string>
    <string name="heart_rate_consent">Pulsmessung erlauben</string>
    <string name="band_required">Damit du die App benutzen kannst, benötigst du ein Micosoft Band 1 oder 2.</string>
    <string name="thanks_for_app_download">Danke, dass du dir unsere App runtergeladen hast!</string>
    <string name="short_introduction">Im Folgenden möchten wir dir eine kurze Einführung geben.</string>
    <string name="make_sure_to_have_band">Bitte stell sicher, dass du ein solches Fitnessarmband besitzt. Zusätzlich benötigen wir deine Erlaubnis, die Pulsrate auszulesen.</string>
    <string name="give_heart_rate_consent">Einverständnis geben</string>
    <string name="please_give_consent">Bitte erlaube das Erfassen deines Herzschlags.</string>
    <string name="heart_rate_consent_given">Einverständnis erteilt</string>
    <string name="requirements">Anforderungen</string>
    <string name="title_activity_statistic">statisticActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings for App Intro Slider 1 -->
    <string name="intro_welcome_title">Willkommen\n bei Movation</string>
    <string name="intro_thanks_for_app_download">
        Danke, dass du dich für unsere Fitness-App entschieden hast!
    </string>
    <string name="intro_short_introduction">
        Im Folgenden möchten wir dir eine kurze Einführung geben.
    </string>

    <!-- Strings for App Intro Slider 2 -->
    <string name="intro_requirements_title">Anforderungen</string>
    <string name="intro_band_required">
        Damit du die App benutzen kannst, benötigst du ein Micosoft Band 1 oder 2.
    </string>
    <string name="intro_make_sure_to_have_band">
        Bitte stelle sicher, dass du ein solches Fitnessarmband besitzt.
    </string>
    <string name="intro_make_sure_to_have_ms_health">
        Desweiteren ist die Installation der App \"Microsoft Health\" erforderlich.
    </string>

    <!-- Strings for App Intro Slide 5-->
    <string name="warning_title">Warnhinweise</string>
    <string name="warning_1">Unser Ziel ist es, dass du mit dem Benutzen unserer App fit wirst und dabei Spaß hast.
        Damit du das erreichst, möchten wir dir noch ein paar Hinweise mit auf dem Weg geben.
    </string>
    <string name="warning_2">- Benutze die App nur, wenn du dich gesund fühlst. Verzichte auf Sport, wenn du krank bist.</string>
    <string name="warning_3">- Benutze das Band nur während des Joggens. Bei anderen sportlichen Aktivitäten kannst du hängen bleiben und dich selbst verletzen.</string>
    <string name="warning_4">- Überanspruche dich nicht und mach auch mal eine Pause. ;)</string>


    <!-- Strings for page titles -->
    <string name="title_home">Home</string>
    <string name="title_goals">Ziele</string>
    <string name="title_statistics">Statistik</string>
    <string name="title_movatar">Movatar</string>
    <string name="title_shop">Shop</string>
    <string name="title_microsoft_band">Microsoft Band</string>

    <!-- Strings for home page -->
    <string name="current_goal_heading">Aktuelles Ziel</string>
    <string name="no_current_goal">Du hast dir aktuell kein Ziel gesetzt.</string>
    <string name="current_credits_heading">Verfügbare Credits</string>
    <string name="fitnessstatus_heading">Fitnesstatus</string>
    <string name="fitnessstatus_fit">Fitnesslevel 3: Du bist richtig fit!</string>
    <string name="fitnessstatus_normal">Fitnesslevel 2: Streng dich noch etwas an!</string>
    <string name="fitnessstatus_unfit">Fitnesslevel 1: Aller Anfang ist schwer!</string>

    <!-- Strings for statistics page -->
    <string name="goals_counter_heading">Anzahl erreichter Ziele</string>
    <string name="credits_all_time_heading">Gesamtanzahl erreichter Credits</string>
    <string name="max_pulse_heading">Maximaler Puls</string>
    <string name="min_pulse_heading">Minimaler Puls</string>
    <string name="distance_heading">Gesamte gelaufene Distanz</string>
    <string name="max_pace_heading">Höchste gemessene Geschwindigkeit</string>

    <!-- Strings for Movatar page -->
    <string name="fitness_level_x">Fitnesslevel %1$s</string>
    <string name="fit">3: Marathonroutinier</string>
    <string name="normal">2: Gelegenheitsläufer</string>
    <string name="unfit">1: Trainingseinsteiger</string>
    <string name="category">Kategorie</string>

</resources>
