<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_homepage"
            android:title="@string/homepage"/>
        <item
            android:id="@+id/nav_goals"
            android:title="@string/goals"/>
        <item
            android:id="@+id/nav_stats"
            android:title="@string/stats"/>
        <item
            android:id="@+id/nav_movatar"
            android:title="@string/movatar"/>
        <item
            android:id="@+id/nav_sensors"
            android:title="@string/microsoft_band"/>
    </group>
<!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send"/>
        </menu>
    </item>
-->
</menu>
