<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:svgimageview="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#FFFFFF">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/intro_welcome_title"
            android:id="@+id/textViewWelcomeTitle"
            android:textSize="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textAlignment="center" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.40" />

        <com.caverock.androidsvg.SVGImageView
            android:id="@+id/Logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal|top"
            svgimageview:svg="movation.svg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:text="@string/intro_thanks_for_app_download"
            android:id="@+id/textThankYou"
            android:textAlignment="center"
            android:textSize="20dp" />

        <TextView
            android:layout_width="309dp"
            android:layout_height="wrap_content"
            android:text="@string/intro_short_introduction"
            android:id="@+id/textIntroduction"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.07"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>