<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.htw_berlin.movation.StatisticFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="12"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6.24">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Puls/Min"
                android:id="@+id/pulseAxisLabel"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="-20dp"
                android:layout_marginRight="-30dp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="@color/movation_light_grey">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/successfulGoals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goals_counter_heading"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp" />
                <TextView
                    android:id="@+id/successfullGoalsValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>
            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon_goals"
                android:layout_marginRight="20dp"
                android:layout_gravity="center" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="@color/movation_dark_grey">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/earnedCreditsAlltime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/credits_all_time_heading"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp" />
                <TextView
                    android:id="@+id/earnedCreditsAllTImeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon_credits"
                android:layout_marginRight="20dp"
                android:layout_gravity="center" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="@color/movation_light_grey">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/pulseMax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_pulse_heading"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp" />
                <TextView
                    android:id="@+id/pulseMaxValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon_pulse_max"
                android:layout_marginRight="20dp"
                android:layout_gravity="center" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="@color/movation_dark_grey">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/pulseMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_pulse_heading"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp" />
                <TextView
                    android:id="@+id/pulseMinValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>
            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon_pulse_min"
                android:layout_marginRight="20dp"
                android:layout_gravity="center" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="@color/movation_light_grey">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance_heading"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp" />
                <TextView
                    android:id="@+id/distanceValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>
            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon_pulse_min"
                android:layout_marginRight="20dp"
                android:layout_gravity="center" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="@color/movation_dark_grey">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/maxPace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_pace_heading"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp" />
                <TextView
                    android:id="@+id/maxPaceValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>
            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon_pulse_min"
                android:layout_marginRight="20dp"
                android:layout_gravity="center" />
        </LinearLayout>



    </LinearLayout>

</RelativeLayout>
